<resources>
    <string name="app_name">NearMe</string>
    <integer name="com_vk_sdk_AppId">5358530</integer>
    <string name="setting">Настройки</string>
    <string name="call">Ответы</string>
    <string name="wish">Желания</string>
    <string name="home">Выборка</string>
    <string name="MyProfile">Профиль</string>
    <string name="needSex">Я ищу</string>
    <string name="myWish">желание</string>
    <string name="needAge">Возраст поиска</string>
    <string name="MyAge">Мой возраст</string>
    <string name="girls">Девушку</string>
    <string name="boys">Парня</string>
    <string name="profile_image_desc">Изображение человека</string>
    <string name="profile_vk">Профиль Вконтакте</string>
    <string name="hint_wish">Вводите свое желание</string>
    <string name="wishNeed">Желание обязательно</string>
    <string name="wish_Added_In_List">Добавлено в список исполнений</string>
    <string name="add_in_black_list">Добавлено в черный список</string>
    <string name="back">Назад</string>
    <string name="wishExecute">Исполнители</string>
    <string name="search_people">Поиск людей</string>
    <string name="profile">Профиль</string>

</resources>
